Refactor project to rebrand from CodeX to Xibe AI, updating all related configurations, documentation, and URLs. Enhance the website's metadata, including titles, descriptions, and social cards, to reflect the new branding. Update package names and ensure all references are consistent across the codebase.

--- a/website/package.json
+++ b/website/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "website",
+  "name": "xibe-ai-website",
   "version": "0.0.0",
   "private": true,
+  "description": "Documentation website for Xibe AI - Advanced AI-powered development platform",
   "scripts": {
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
